# ExampleProject

./: CMakeLists.txt  README.md
lib/: googletest
src/: CMakeLists.txt  Formula.h
tst/: CMakeLists.txt  Formula-test.cpp  main.cpp
